--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -10,9 +10,9 @@
 </p>
 
 <p>
-  <strong>ID:</strong>
-  <%= @device.segunda_id %>
+  <strong>UUID:</strong>
+  <%= @device.uuid %>
 </p>
 
-<%= link_to 'Back', devices_path, :class => "link link_views" %> 
+<%= link_to 'Back', devices_path, :class => "link link_views" %>
 </div>
