--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,18 +1,14 @@
-<div class="show">
-<%= form_with scope: :device, url: devices_path, local: true do |form| %>  <p>
-
+<%= form_with scope: :device, url: devices_path, local: true do |form| %>  <div>
+  <div>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
-  </p>
-
-  <p>
+  </div>
+  <div>
     <%= form.label :address %><br>
     <%= form.number_field :address %>
-  </p>
-
-  <p>
+  </div>
+  <div>
     <%= form.submit %>
-  </p>
+  </div>
 <% end %>
-<%= link_to 'Back', devices_path, :class => "link link_views" %> 
-</div>
+<%= link_to 'Back', devices_path %>
