--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,14 +1,30 @@
-<%= form_with scope: :device, url: devices_path, local: true do |form| %>  <div>
-  <div>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </div>
-  <div>
-    <%= form.label :address %><br>
-    <%= form.number_field :address %>
-  </div>
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
-<%= link_to 'Back', devices_path %>
+<div class="new">
+  <%= form_with scope: :device, url: devices_path, local: true do |form| %>
+  <table class="table table-striped">
+    <thead class="thead-dark">
+      <tr>
+        <th>
+          <%= form.label :name %>
+        </th>
+        <th>
+          <%= form.label :address %>
+        </th>
+        <th>
+      </tr>
+    </thead>
+    <tr>
+      <th>
+        <%= form.text_field :name %>
+      </th>
+      <th>
+        <%= form.number_field :address %><br>
+      </th>
+      <th>
+        <%= form.submit %>
+      </th>
+    </tr>
+    <% end %>
+  </table>
+
+  <%= link_to 'Back', devices_path, class:"btn btn-outline-primary" %>
+</div>
