--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -25,6 +25,7 @@
     </tr>
     <% end %>
   </table>
-
+<center>
   <%= link_to 'Back', devices_path, class:"btn btn-outline-primary" %>
+</center>
 </div>
