--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -18,7 +18,7 @@
           <%= link_to 'Edit', edit_device_path(device), class: "btn btn-info" %>
           <%= link_to 'Destroy', device_path(device),
                method: :delete, class: "btn btn-danger",
-               data: { confirm: 'You are sure you want to delete the device.' } %>
+               data: { confirm: 'Are you sure you want to delete the device?' } %>
       </td>
     </tr>
   <% end %>
