--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -26,7 +26,7 @@
     <% end %>
   </table>
 <center>
-  <%= link_to 'Device', users_path(current_user), class:"btn btn-outline-danger" %>
+  <%= link_to 'Cancel', user_devices_path(current_user), class:"btn btn-outline-danger" %>
 </center>
 <br>
 <br>
