--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
           <%= link_to 'Edit', edit_user_path(user), class: "btn btn-info" %>
           <%= link_to 'Destroy', user_path(user),
                method: :delete, class: "btn btn-danger",
-               data: { confirm: 'ksi pero no' } %>
+               data: { confirm: 'Are you sure delete this User?' } %>
       </td>
     </tr>
   <% end %>
