--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -12,7 +12,7 @@
       <%= form.text_field :name %>
     </th>
     <th>
-      <%= form.text_field :address %>
+      <%= form.number_field :address %>
     </th>
     <th>
       <%= form.submit %>
