--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -18,7 +18,7 @@
           <%= link_to 'Edit', edit_user_device_path(device.user_id, device.id), class: "btn btn-info" %>
           <%= link_to 'Destroy', user_device_path(device.user_id, device.id),
                method: :delete, class: "btn btn-danger",
-               data: { confirm: 'ksi pero no' } %>
+               data: { confirm: 'Are you sure delete this Device?' } %>
       </td>
     </tr>
   <% end %>
