--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -9,7 +9,7 @@
       <th></th>
     </tr>
   </thead>
-  <% @device.each do |device|%>
+  <% @devices_all.each do |device|%>
     <tr>
       <td><%= device.name %></td>
       <td><%= device.address %></td>
