--- a/app/views/devices/edit.html.erb
+++ b/app/views/devices/edit.html.erb
@@ -21,7 +21,7 @@
 </table>
 <% end %>
 <center>
-<%= link_to 'Cancel', user_path(current_user), class:"btn btn-outline-danger" %>
+<%= link_to 'Cancel', user_devices_path(current_user), class:"btn btn-outline-danger" %>
 </center>
 <br>
 <br>
